# finops_analyzer

./: .gitignore  README.md  main.py  pyproject.toml  schemas.py
api/: deps.py
api/v1/: pages.py
deploy/dev/: README.md  docker-compose.focus-converter.yaml  dockerfile.converter.yaml
focus_converter/: service.py
static/css/: converter_page.css  styles.css
static/js/: converter_page.js  main_page.js  tailwind_config.js
templates/: base.html  converter.html  main_page.html
